customize scrollbar, integrating pagination in categories section, bug fixes

--- a/FrontEnd/public/assets/styles/index.css
+++ b/FrontEnd/public/assets/styles/index.css
@@ -13,3 +13,8 @@ input[type="number"]::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
